[package]
name = "warden-worker"
version = "0.5.0"
edition = "2021"
authors = ["qaz741wsd856"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# Worker & Web APIs
worker = { version = "0.7.5", features = ["axum", "http", "d1"] }
worker-macros = { version = "0.7.5", features = ['http'] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Crypto", "CryptoKey", "SubtleCrypto", "UrlSearchParams", "WorkerGlobalScope"] }
console_error_panic_hook = "0.1.7"
wasm-streams = "0.5"

# Axum and Routing
axum = { version = "0.8", default-features = false, features=["json", "macros", "form", "multipart", "query"] }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmpv = "1.3"

# Crypto & Encoding
# We only use HS256 (HMAC) + standard JSON claims. Disable default `ciborium` feature to reduce deps.
jwt-compact = { version = "0.8", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
base32 = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.4", features = ["wasm_js"] }
constant_time_eq = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde", "rng-getrandom"] }
log = "0.4"
thiserror = "1.0"
once_cell = "1.21"
console_log = "1.0.0"
glob-match = "0.2"
